Fix scrollbar appearing horizontally

--- a/src/app/components/navBar/page.module.scss
+++ b/src/app/components/navBar/page.module.scss
@@ -9,7 +9,7 @@
   flex-direction: row;
   align-items: center;
   background-color: white;
-  outline: auto;
+  //outline: auto;
   margin-top: 40px;
 }
 
