--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,8 +9,11 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
  // position: relative;
+  //max-width: 100%;
+  overflow-x: hidden;
+  
 }
 
-* {
-  outline: 1px solid red; /* Helps you visualize overflowing elements */
-}
+// * {
+//   outline: 1px solid red; /* Helps you visualize overflowing elements */
+// }
